--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-﻿Vigenere Cryption/.classpath
+Vigenere Cryption/.classpath
 Vigenere Cryption/.project
 Vigenere Cryption/bin
 Vigenere Cryption/.settings
 Vigenere Cryption/target
 Vigenere Cryption/pom.xml
+Serpent Cypher/node_modules/
+Serpent Cypher/.idea/
