Set up connection with server using Spring

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Serpent Cypher/.idea/
 Serpent Cypher/api/.project
 Serpent Cypher/api/bin
 Serpent Cypher/api/.classpath
+Serpent Cypher/api/target
+Serpent Cypher/api/.settings
