Elliptic curve cryption: 1. Add define parameters for equation 2. Add generate elements for elliptic group using external 'lib' ModularArith for count square root mod p

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ Serpent Cypher/sockets/bsu/.project
 Serpent Cypher/.project
 Serpent Cypher/sockets/bsu/.settings
 Serpent Cypher/sockets/bsu/.classpath
+
+Elliptic Curve DSA/.project
+Elliptic Curve DSA/.classpath
