--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Serpent Cypher/sockets/bsu/.project
 Serpent Cypher/.project
 Serpent Cypher/sockets/bsu/.settings
 Serpent Cypher/sockets/bsu/.classpath
+Serpent Cypher/bin
 
 Elliptic Curve DSA/.project
 Elliptic Curve DSA/.classpath
